<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Service Provider</string>
    <string name="join_now">Join Now</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="join_with_account">Join us with your account and find the best services from all around the world</string>


    // Splash Screen Title First Line List
    <string-array name="SPLASH_TITLE_FIRST_LINE_LIST">
        <item>Want to hire someone ?</item>
        <item>Find services right</item>
        <item>Discover the best</item>
    </string-array>

    // Splash Screen Title Second Line List
    <string-array name="SPLASH_TITLE_SECOND_LINE_LIST">
        <item>we\'re here for you</item>
        <item>away easily</item>
        <item>services around you</item>
    </string-array>

    // Splash screen description list
    <string name="SPLASH_DESC">
        In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstr
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="optionsScreenBackground">Background</string>
    <string name="asGuest">Continue as a guest</string>
    <string name="explore_better">Explore better \nsolutions with us</string>
    <string name="color_your_life">Let\'s color your life \neveryday with us</string>
    <string name="find_services_or_workers">If you want to find services or workers to hire, go with find services, or if you\'re a worker or service provider, go with find jobs.</string>
    <string name="find_services">Find services</string>
    <string name="find_jobs">Find jobs</string>
    <string name="welcome_back">Welcome back</string>
    <string name="login_now">Login now using email address and password \nthat you have registered already</string>
    <string name="et_email_address">Email Address</string>
    <string name="et_password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgotten password?</string>
    <string name="reset_password">Reset</string>
    <string name="signin_with_google">Sign in with Google</string>
    <string name="Or">OR</string>
    <string name="dont_have_account">Don\'t have an account ?</string>
    <string name="create">Create</string>
    <string name="create_account">Create an account</string>
    <string name="create_new_customer_account">Create new customer account to discover \nworkers and services everywhere</string>
    <string name="et_confirm_password">Confirm your password</string>
    <string name="et_new_password">Create new password</string>
    <string name="register">Create and account</string>
    <string name="already_have_account">Already have and account?</string>

</resources>