<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="30dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".RegisterFragment">

    <ImageView
        android:id="@+id/ivAddPerson"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:scaleType="fitCenter"
        android:background="@drawable/circle"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCreateAccount"
        style="@style/Headline_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textColor="@color/primary"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivAddPerson" />

    <TextView
        android:id="@+id/tvCreateNewAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_customer_account"
        android:textColor="@color/dark_grey"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvCreateAccount"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/etEmailAddress"
        android:inputType="textEmailAddress|textNoSuggestions"
        android:hint="@string/et_email_address"
        style="@style/Sp_Edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCreateNewAccount"
        />

    <EditText
        android:id="@+id/etPassword"
        android:inputType="textPassword|textNoSuggestions"
        android:hint="@string/et_new_password"
        style="@style/Sp_Edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailAddress"
        />


    <EditText
        android:id="@+id/etConfirmPassword"
        android:inputType="textPassword|textNoSuggestions"
        android:hint="@string/et_confirm_password"
        style="@style/Sp_Edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        />

    <Button
        android:id="@+id/btnRegister"
        style="@style/Account_Btn"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Or"
        android:textColor="@color/dark_grey"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottomLinear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />



    <LinearLayout
        android:id="@+id/bottomLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvDntHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account"
            android:textColor="@color/dark_grey"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="49dp"
            android:layout_height="19dp"
            android:background="@drawable/flat_btn"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/primary" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>