<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="30dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".LoginFragment">

    <ImageView
        android:id="@+id/ivLock"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:src="@drawable/ic_baseline_lock_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWelcomeBack"
        style="@style/Headline_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textColor="@color/primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLock" />

    <TextView
        android:id="@+id/tvLoginNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_now"
        android:textColor="@color/dark_grey"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvWelcomeBack"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/etEmailAddress"
        android:inputType="textEmailAddress|textNoSuggestions"
        android:hint="@string/et_email_address"
        style="@style/Sp_Edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginNow"
        />

    <EditText
        android:id="@+id/etPassword"
        android:inputType="textPassword|textNoSuggestions"
        android:hint="@string/et_password"
        style="@style/Sp_Edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailAddress"
        />

    <Button
        android:id="@+id/btnLogin"
        style="@style/Account_Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="49dp"
        android:layout_height="19dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/flat_btn"
        android:text="@string/reset_password"
        android:textAllCaps="false"
        android:textColor="@color/primary"
        app:layout_constraintStart_toEndOf="@+id/tvForgotPassword"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/dark_grey"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Or"
        android:textColor="@color/dark_grey"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottomLinear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />



    <LinearLayout
        android:id="@+id/bottomLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvDntHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:textColor="@color/dark_grey"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="49dp"
            android:layout_height="19dp"
            android:background="@drawable/flat_btn"
            android:text="@string/create"
            android:textAllCaps="false"
            android:textColor="@color/primary" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>