<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SecondOptionsScreenFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/options_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:lineSpacingExtra="6sp"
            android:text="@string/color_your_life"
            android:textColor="@color/secondary"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/find_services_or_workers"
            android:textColor="@color/secondary"
            android:textSize="11sp" />

        <Button
            android:id="@+id/btnJoinNow"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/options_screen_btn"
            android:text="@string/find_services"
            android:textColor="@color/primary"
            />

        <Button
            android:id="@+id/btnAsGuest"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="45dp"
            android:background="@drawable/options_screen_transparent_btn"
            android:text="@string/find_jobs"
            android:textColor="@color/secondary"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>